--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -993,5 +993,9 @@
     <string name="manage">Manage</string>
     <string name="message_from">Message from %s</string>
     <string name="not_spam_move_to_inbox">Not spam (Move to Inbox)</string>
+    <plurals name="messages_count">
+        <item quantity="one">%d message</item>
+        <item quantity="other">%d messages</item>
+    </plurals>
 
 </resources>
