Removed ManageLabelsDialogFragment and ShowLabelsManagerDialogTask.
MAILAND-1760

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -997,5 +997,9 @@
         <item quantity="one">%d message</item>
         <item quantity="other">%d messages</item>
     </plurals>
+    <plurals name="conversations_count">
+        <item quantity="one">%d conversation</item>
+        <item quantity="other">%d conversations</item>
+    </plurals>
 
 </resources>
