Updated new contact details layout, added new icons etc.
MAILAND-1875

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1022,4 +1022,5 @@
         <item quantity="other">%d conversations</item>
     </plurals>
 
+    <string name="contacts_call">Call</string>
 </resources>
