--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,6 +58,9 @@
     <string name="set_msg_password_password_hint_title">Password hint</string>
     <string name="set_msg_password_password_hint_hint">Define hint (Optional)</string>
     <string name="set_msg_password_apply_password">Apply password</string>
+    <string name="set_msg_password_error_too_short">Password too short</string>
+    <string name="set_msg_password_error_too_long">Password too long</string>
+    <string name="set_msg_password_error_mismatch">Password does not match</string>
 
     <string name="set_msg_expiration_title">Message expiration</string>
     <string name="set_msg_expiration_none">None</string>
