--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1103,4 +1103,8 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     <string name="invalid_firebase_api_key_message">Invalid Firebase API key. Push notifications will not work.</string>
     <string name="failed_saving_draft_online">Failed saving online draft for message: "%s"</string>
     <string name="cannot_open_message_while_being_sent">Can\'t open this message while it\'s being sent</string>
+
+    <!-- region Proton Calendar -->
+    <string name="button_open_in_proton_calendar">Open in Proton Calendar</string>
+    <!-- endregion -->
 </resources>
