--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -964,7 +964,7 @@
     <string name="combined_contacts">Combined Contacts</string>
     <string name="turn_combined_contacts_on">Turn this feature on to auto-complete email addresses using contacts from all your logged in accounts.</string>
 
-    <string name="local_cache_management">Local Cache Management</string>
+    <string name="local_cache_management">Local Cache</string>
     <string name="cache_cleared">Local Cache is Refreshed</string>
     <string name="empty_data">Empty Data</string>
     <!-- endregion -->
