--- a/app/src/main/res/values-is-rIS/strings.xml
+++ b/app/src/main/res/values-is-rIS/strings.xml
@@ -623,7 +623,7 @@
     <string name="title_activity_contact_group_details">ContactGroupDetailsActivity</string>
     <!-- Contact Groups Strings -->
     <string name="add_photo">Bæta við mynd</string>
-    <string name="contact_display_name">\ue91c Birtingarnafn</string>
+    <string name="contact_display_name">Birtingarnafn</string>
     <string name="add_new_email">\ue914 Bæta við tölvupóstfangi</string>
     <string name="no_groups">Engir hópar</string>
     <string name="contact_vcard_note">Athugasemd</string>
