--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -611,7 +611,7 @@
     <string name="title_activity_contact_group_details">ContactGroupDetailsActivity</string>
     <!-- Contact Groups Strings -->
     <string name="add_photo">写真を追加</string>
-    <string name="contact_display_name">\ue91c 表示名</string>
+    <string name="contact_display_name">表示名</string>
     <string name="add_new_email">\ue914 メールアドレスを追加する</string>
     <string name="no_groups">グループはありません。</string>
     <string name="contact_vcard_note">メモ</string>
