--- a/app/src/main/res/values-ca-rES/strings.xml
+++ b/app/src/main/res/values-ca-rES/strings.xml
@@ -623,7 +623,7 @@
     <string name="title_activity_contact_group_details">ContactGroupDetailsActivity</string>
     <!-- Contact Groups Strings -->
     <string name="add_photo">Afegir foto</string>
-    <string name="contact_display_name">\ue91c Nom de Visualització</string>
+    <string name="contact_display_name">Nom de Visualització</string>
     <string name="add_new_email">\ue914 Afegir Adreça de Correu Electrònic</string>
     <string name="no_groups">No hi ha grups</string>
     <string name="contact_vcard_note">Nota</string>
