--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -641,7 +641,7 @@
     <string name="title_activity_contact_group_details">ContactGroupDetailsActivity</string>
     <!-- Contact Groups Strings -->
     <string name="add_photo">Přidat fotku</string>
-    <string name="contact_display_name">\ue91c Zobrazit jméno</string>
+    <string name="contact_display_name">Zobrazit jméno</string>
     <string name="add_new_email">\ue914 Přidat e-mailovou adresu</string>
     <string name="no_groups">Žádné skupiny</string>
     <string name="contact_vcard_note">Poznámka</string>
