--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -623,7 +623,7 @@
     <string name="title_activity_contact_group_details">ContactGroupDetailsActivity</string>
     <!-- Contact Groups Strings -->
     <string name="add_photo">Tilføj foto</string>
-    <string name="contact_display_name">\ue91c Visningsnavn</string>
+    <string name="contact_display_name">Visningsnavn</string>
     <string name="add_new_email">Tilføj e-mail</string>
     <string name="no_groups">Ingen grupper</string>
     <string name="contact_vcard_note">Notat</string>
