--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -623,7 +623,7 @@
     <string name="title_activity_contact_group_details">ContactGroupDetailsActivity</string>
     <!-- Contact Groups Strings -->
     <string name="add_photo">Προσθήκη Φωτογραφίας</string>
-    <string name="contact_display_name">\ue91c Εμφανιζόμενο όνομα</string>
+    <string name="contact_display_name">Εμφανιζόμενο όνομα</string>
     <string name="add_new_email">\ue914 Προσθήκη Διεύθυνσης E-mail</string>
     <string name="no_groups">Καμία Ομάδα</string>
     <string name="contact_vcard_note">Σημείωση</string>
