--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -623,7 +623,7 @@
     <string name="title_activity_contact_group_details">ContactGroupDetailsActivity</string>
     <!-- Contact Groups Strings -->
     <string name="add_photo">Añadir imagen</string>
-    <string name="contact_display_name">\ue91c Nombre a mostrar</string>
+    <string name="contact_display_name">Nombre a mostrar</string>
     <string name="add_new_email">\ue914 Añadir correo electrónico</string>
     <string name="no_groups">Ningún grupo</string>
     <string name="contact_vcard_note">Nota</string>
