--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -632,7 +632,7 @@
     <string name="title_activity_contact_group_details">ContactGroupDetailsActivity</string>
     <!-- Contact Groups Strings -->
     <string name="add_photo">Dodaj fotografiju</string>
-    <string name="contact_display_name">\ue91c Zaslonski naziv</string>
+    <string name="contact_display_name">Zaslonski naziv</string>
     <string name="add_new_email">\ue914 Dodaj adresu e-pošte</string>
     <string name="no_groups">Nema grupe</string>
     <string name="contact_vcard_note">Bilješka</string>
