--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -639,7 +639,7 @@
     <string name="title_activity_contact_group_details">ContactGroupDetailsActivity</string>
     <!-- Contact Groups Strings -->
     <string name="add_photo">Dodaj zdjęcie</string>
-    <string name="contact_display_name">\ue91c Nazwa wyświetlana</string>
+    <string name="contact_display_name">Nazwa wyświetlana</string>
     <string name="add_new_email">\ue914 Dodaj adres e-mail</string>
     <string name="no_groups">Brak grup</string>
     <string name="contact_vcard_note">Notatki</string>
