--- a/app/src/main/res/values-sv-rSE/strings.xml
+++ b/app/src/main/res/values-sv-rSE/strings.xml
@@ -620,7 +620,7 @@
     <string name="title_activity_contact_group_details">ContactGroupDetailsActivity</string>
     <!-- Contact Groups Strings -->
     <string name="add_photo">Lägg till foto</string>
-    <string name="contact_display_name">\ue91c Visningsnamn</string>
+    <string name="contact_display_name">Visningsnamn</string>
     <string name="add_new_email">\ue914 Lägga till e-postadress</string>
     <string name="no_groups">Inga grupper</string>
     <string name="contact_vcard_note">Anteckning</string>
