--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -641,7 +641,7 @@
     <string name="title_activity_contact_group_details">ContactGroupDetailsActivity</string>
     <!-- Contact Groups Strings -->
     <string name="add_photo">Додати світлину</string>
-    <string name="contact_display_name">\ue91c Показуване ім\'я</string>
+    <string name="contact_display_name">Показуване ім\'я</string>
     <string name="add_new_email">\ue914 Додати адресу е-пошти</string>
     <string name="no_groups">Немає груп</string>
     <string name="contact_vcard_note">Нотатка</string>
