--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -689,7 +689,7 @@
 
     <!-- Contact Groups Strings -->
     <string name="add_photo">Add Photo</string>
-    <string name="contact_display_name">\ue91c Display Name</string>
+    <string name="contact_display_name">Display Name</string>
     <string name="add_new_email">\ue914 Add Email Address</string>
     <string name="no_groups">No Groups</string>
     <string name="contact_vcard_note">Note</string>
