--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,6 +88,9 @@
     <string name="settings_confirm_pin_code_title">Repeat PIN code</string>
     <string name="settings_pins_dont_match">The PIN codes must match!</string>
     <string name="settings_enter_pin_code_title">Enter PIN code</string>
+    <string name="settings_swipe_settings_info">Set up swipe gestures to access most used actions.</string>
+    <string name="settings_swipe_left_to_right">Left to right</string>
+    <string name="settings_swipe_right_to_left">Right to left</string>
 
     <!-- end region -->
 
@@ -923,10 +926,13 @@
     <!-- region Swipe Actions -->
     <string name="swipe_action_chooser_title">Choose swipe action</string>
     <string name="swipe_action_trash">Message moved to trash</string>
+    <string name="swipe_action_trash_short">Move to Trash</string>
     <string name="swipe_action_star">Message star updated</string>
     <string name="swipe_action_star_short">Update star</string>
     <string name="swipe_action_spam">Message marked as spam</string>
+    <string name="swipe_action_spam_short">Spam</string>
     <string name="swipe_action_archive">Message archived</string>
+    <string name="swipe_action_archive_short">Archive</string>
     <string name="swipe_action_mark_read">Message marked as read</string>
     <string name="swipe_action_mark_read_short">Read</string>
     <plurals name="action_move_to_trash">
@@ -1041,12 +1047,14 @@
 
     <string name="star">Star</string>
     <string name="unstar">Unstar</string>
+    <string name="star_unstar">Star/unstar</string>
     <string name="send_to_archive">Send to archive?</string>
     <string name="new_label">New Label</string>
     <string name="new_folder">New Folder</string>
     <string name="label_as">Label as…</string>
     <string name="mark_as_unread">Mark as unread</string>
     <string name="mark_as_read">Mark as read</string>
+    <string name="mark_as_read_unread">Mark as read/unread</string>
     <string name="move_message">Move message</string>
     <string name="manage">Manage</string>
     <string name="message_from">Message from %s</string>
