--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -621,7 +621,7 @@ zu: &lt;br/&gt;&lt;br/&gt;&lt;u&gt;%s&lt;/u&gt;&lt;br/&gt;&lt;br/&gt; Möchten S
     <!-- Contact Groups Strings -->
     <string name="add_photo">Foto hinzufügen</string>
     <string name="contact_display_name">Name anzeigen</string>
-    <string name="add_new_email">\ue914 E-Mail-Adresse hinzufügen</string>
+    <string name="add_new_email">E-Mail-Adresse hinzufügen</string>
     <string name="no_groups">Keine Gruppen</string>
     <string name="contact_vcard_note">Notiz</string>
     <string name="edit_contact">Kontakt bearbeiten</string>
