--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -624,7 +624,7 @@
     <!-- Contact Groups Strings -->
     <string name="add_photo">Προσθήκη Φωτογραφίας</string>
     <string name="contact_display_name">Εμφανιζόμενο όνομα</string>
-    <string name="add_new_email">\ue914 Προσθήκη Διεύθυνσης E-mail</string>
+    <string name="add_new_email">Προσθήκη Διεύθυνσης E-mail</string>
     <string name="no_groups">Καμία Ομάδα</string>
     <string name="contact_vcard_note">Σημείωση</string>
     <string name="edit_contact">Επεξεργασία επαφής</string>
