--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -624,7 +624,7 @@
     <!-- Contact Groups Strings -->
     <string name="add_photo">Añadir imagen</string>
     <string name="contact_display_name">Nombre a mostrar</string>
-    <string name="add_new_email">\ue914 Añadir correo electrónico</string>
+    <string name="add_new_email">Añadir correo electrónico</string>
     <string name="no_groups">Ningún grupo</string>
     <string name="contact_vcard_note">Nota</string>
     <string name="edit_contact">Editar contacto</string>
