--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -624,7 +624,7 @@
     <!-- Contact Groups Strings -->
     <string name="add_photo">Ajouter une photo</string>
     <string name="contact_display_name">\ue91a Nom d\'affichage</string>
-    <string name="add_new_email">\ue914 Ajouter une adresse électronique</string>
+    <string name="add_new_email">Ajouter une adresse électronique</string>
     <string name="no_groups">Aucun groupe</string>
     <string name="contact_vcard_note">Note</string>
     <string name="edit_contact">Modifier le contact</string>
