--- a/app/src/main/res/values-hu-rHU/strings.xml
+++ b/app/src/main/res/values-hu-rHU/strings.xml
@@ -625,7 +625,7 @@ Svájci székhellyel</string>
     <!-- Contact Groups Strings -->
     <string name="add_photo">Fénykép hozzáadása</string>
     <string name="contact_display_name">Megjelenített név</string>
-    <string name="add_new_email">\ue914 Email cím hozzáadása</string>
+    <string name="add_new_email">Email cím hozzáadása</string>
     <string name="no_groups">Nincs csoport</string>
     <string name="contact_vcard_note">Megjegyzés</string>
     <string name="edit_contact">Névjegy szerkesztése</string>
