--- a/app/src/main/res/values-is-rIS/strings.xml
+++ b/app/src/main/res/values-is-rIS/strings.xml
@@ -624,7 +624,7 @@
     <!-- Contact Groups Strings -->
     <string name="add_photo">Bæta við mynd</string>
     <string name="contact_display_name">Birtingarnafn</string>
-    <string name="add_new_email">\ue914 Bæta við tölvupóstfangi</string>
+    <string name="add_new_email">Bæta við tölvupóstfangi</string>
     <string name="no_groups">Engir hópar</string>
     <string name="contact_vcard_note">Athugasemd</string>
     <string name="edit_contact">Breyta tengilið</string>
