--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -624,7 +624,7 @@
     <!-- Contact Groups Strings -->
     <string name="add_photo">Aggiungi foto</string>
     <string name="contact_display_name">Nome visualizzato</string>
-    <string name="add_new_email">\ue914 Aggiungi indirizzo email</string>
+    <string name="add_new_email">Aggiungi indirizzo email</string>
     <string name="no_groups">Nessun gruppo</string>
     <string name="contact_vcard_note">Nota</string>
     <string name="edit_contact">Modifica contatto</string>
