--- a/app/src/main/res/values-kab/strings.xml
+++ b/app/src/main/res/values-kab/strings.xml
@@ -624,7 +624,7 @@
     <!-- Contact Groups Strings -->
     <string name="add_photo">Rnu Tawlaft</string>
     <string name="contact_display_name">Sken Isem</string>
-    <string name="add_new_email">\ue914 Rnu Tansa Imayl</string>
+    <string name="add_new_email">Rnu Tansa Imayl</string>
     <string name="no_groups">Ulac Igrawen</string>
     <string name="contact_vcard_note">Tazmilt</string>
     <string name="edit_contact">Ẓreg anermis</string>
