--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -624,7 +624,7 @@
     <!-- Contact Groups Strings -->
     <string name="add_photo">Foto toevoegen</string>
     <string name="contact_display_name">Weergavenaam</string>
-    <string name="add_new_email">\ue914 E-mailadres toevoegen</string>
+    <string name="add_new_email">E-mailadres toevoegen</string>
     <string name="no_groups">Geen groepen</string>
     <string name="contact_vcard_note">Opmerking</string>
     <string name="edit_contact">Contactpersoon bewerken</string>
