--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -624,7 +624,7 @@
     <!-- Contact Groups Strings -->
     <string name="add_photo">Adicionar foto</string>
     <string name="contact_display_name">Nome de exibição</string>
-    <string name="add_new_email">\ue914 Adicionar endereço de e-mail</string>
+    <string name="add_new_email">Adicionar endereço de e-mail</string>
     <string name="no_groups">Sem grupos</string>
     <string name="contact_vcard_note">Nota</string>
     <string name="edit_contact">Editar contato</string>
