--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -623,7 +623,7 @@
     <!-- Contact Groups Strings -->
     <string name="add_photo">Adicionar fotografia</string>
     <string name="contact_display_name">Nome a mostrar</string>
-    <string name="add_new_email">\ue914 Adicionar endereço de email</string>
+    <string name="add_new_email">Adicionar endereço de email</string>
     <string name="no_groups">Sem grupos</string>
     <string name="contact_vcard_note">Nota</string>
     <string name="edit_contact">Editar contacto</string>
