--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -642,7 +642,7 @@
     <!-- Contact Groups Strings -->
     <string name="add_photo">Добавить фото</string>
     <string name="contact_display_name">Отображаемое имя</string>
-    <string name="add_new_email">\ue914 Добавить адрес электронной почты</string>
+    <string name="add_new_email">Добавить адрес электронной почты</string>
     <string name="no_groups">Нет групп</string>
     <string name="contact_vcard_note">Примечание</string>
     <string name="edit_contact">Изменить контакт</string>
