--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -631,7 +631,7 @@
     <string name="create_contact_group">Créer un groupe de contacts</string>
     <string name="edit_contact_group">Modifier un groupe de contacts</string>
     <string name="contact_groups_manage_addresses">Gérer les adresses</string>
-    <string name="contact_group_display_name">\ue91a Nom d\'affichage</string>
+    <string name="contact_group_display_name">Nom d\'affichage</string>
     <string name="contact_group_groups_icon">\ue91a </string>
     <string name="contact_add_addr_to_group">Ajouter une adresse aux groupes</string>
     <string name="title_activity_address_chooser">Gérer les adresses</string>
