--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -630,7 +630,7 @@
     <string name="create_contact_group">Criar grupo de contactos</string>
     <string name="edit_contact_group">Editar grupo de contactos</string>
     <string name="contact_groups_manage_addresses">Gerir endereços</string>
-    <string name="contact_group_display_name">\ue91a Nome a mostrar</string>
+    <string name="contact_group_display_name">Nome a mostrar</string>
     <string name="contact_group_groups_icon">\ue91a </string>
     <string name="contact_add_addr_to_group">Adicionar endereço aos grupos</string>
     <string name="title_activity_address_chooser">Gerir endereços</string>
