--- a/app/src/main/res/values-ca-rES/strings.xml
+++ b/app/src/main/res/values-ca-rES/strings.xml
@@ -631,7 +631,7 @@
     <string name="create_contact_group">Crear Grup de Contactes</string>
     <string name="edit_contact_group">Edita Grup de Contactes</string>
     <string name="contact_groups_manage_addresses">Gestionar les adreces</string>
-    <string name="contact_group_display_name">\ue91a Nom de Visualització</string>
+    <string name="contact_group_display_name">Nom de Visualització</string>
     <string name="contact_group_groups_icon">\ue91a </string>
     <string name="contact_add_addr_to_group">Afegiu adreces a grups</string>
     <string name="title_activity_address_chooser">Gestiona les adreces</string>
