--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -640,7 +640,7 @@
     <string name="create_contact_group">Stvaranje grupe kontakta</string>
     <string name="edit_contact_group">Uredi grupu kontakata</string>
     <string name="contact_groups_manage_addresses">Upravljanje adresama</string>
-    <string name="contact_group_display_name">\ue91a Zaslonski naziv</string>
+    <string name="contact_group_display_name">Zaslonski naziv</string>
     <string name="contact_group_groups_icon">\ue91a </string>
     <string name="contact_add_addr_to_group">Dodajte adresu u grupu</string>
     <string name="title_activity_address_chooser">Upravljanje adresama</string>
