--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -631,7 +631,7 @@
     <string name="create_contact_group">Creare un gruppo di contatto</string>
     <string name="edit_contact_group">Modifica un gruppo di contatto</string>
     <string name="contact_groups_manage_addresses">Gestire gli indirizzi</string>
-    <string name="contact_group_display_name">\ue91a Nome visualizzato</string>
+    <string name="contact_group_display_name">Nome visualizzato</string>
     <string name="contact_group_groups_icon">\ue91a </string>
     <string name="contact_add_addr_to_group">Aggiungere indirizzo ai gruppi</string>
     <string name="title_activity_address_chooser">Gestire gli indirizzi</string>
