--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -619,7 +619,7 @@
     <string name="create_contact_group">連絡先グループの作成</string>
     <string name="edit_contact_group">連絡先グループの編集</string>
     <string name="contact_groups_manage_addresses">メンバーの管理</string>
-    <string name="contact_group_display_name">\ue91a 表示名</string>
+    <string name="contact_group_display_name">表示名</string>
     <string name="contact_group_groups_icon">\ue91a </string>
     <string name="contact_add_addr_to_group">アドレスをグループへ追加</string>
     <string name="title_activity_address_chooser">メンバーの管理</string>
