--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -631,7 +631,7 @@
     <string name="create_contact_group">Contactgroep aanmaken</string>
     <string name="edit_contact_group">Contactgroep bewerken</string>
     <string name="contact_groups_manage_addresses">Adressen beheren</string>
-    <string name="contact_group_display_name">\ue91a Weergavenaam</string>
+    <string name="contact_group_display_name">Weergavenaam</string>
     <string name="contact_group_groups_icon">\ue91a </string>
     <string name="contact_add_addr_to_group">Adres toevoegen aan groepen</string>
     <string name="title_activity_address_chooser">Adressen beheren</string>
