--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -647,7 +647,7 @@
     <string name="create_contact_group">Utwórz grupę kontaktów</string>
     <string name="edit_contact_group">Edytuj grupę kontaktów</string>
     <string name="contact_groups_manage_addresses">Zarządzaj adresami</string>
-    <string name="contact_group_display_name">\ue91a Nazwa wyświetlana</string>
+    <string name="contact_group_display_name">Nazwa wyświetlana</string>
     <string name="contact_group_groups_icon">\ue91a </string>
     <string name="contact_add_addr_to_group">Dodaj adres do grup</string>
     <string name="title_activity_address_chooser">Zarządzaj adresami</string>
