--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -628,7 +628,7 @@
     <string name="create_contact_group">Kişi Grubu Oluştur</string>
     <string name="edit_contact_group">Kişi Grubunu Düzenle</string>
     <string name="contact_groups_manage_addresses">Adresleri yönet</string>
-    <string name="contact_group_display_name">\ue91a Görünen ad</string>
+    <string name="contact_group_display_name">Görünen ad</string>
     <string name="contact_group_groups_icon">\ue91a </string>
     <string name="contact_add_addr_to_group">Gruplara adres ekle</string>
     <string name="title_activity_address_chooser">Adresleri yönet</string>
