--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -697,7 +697,8 @@
     <string name="create_contact_group">Create Contact Group</string>
     <string name="edit_contact_group">Edit Contact Group</string>
     <string name="contact_groups_manage_addresses">Manage Addresses</string>
-    <string name="contact_group_display_name">\ue91a Display Name</string>
+    <string name="contact_groups_manage_members">Manage Members</string>
+    <string name="contact_group_display_name">Display Name</string>
     <string name="contact_group_groups_icon">\ue91a </string>
     <string name="contact_add_addr_to_group">Add address to groups</string>
     <string name="title_activity_address_chooser">Manage Addresses</string>
