--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1024,4 +1024,5 @@
     </plurals>
 
     <string name="contacts_call">Call</string>
+    <string name="send_group_message">Send group message</string>
 </resources>
