--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -916,7 +916,7 @@
     <string name="labels_and_folders">Labels &amp; Folders </string>
     <string name="folders">Folders</string>
     <string name="labels">Labels</string>
-    <string name="labels_manage">Labels manager</string>
+    <string name="labels_manager">Labels manager</string>
     <string name="folders_manage">Folders manager</string>
 
     <string name="swiping_gesture">Swiping gesture</string>
